feat: Init nohorny v4 beta
* Thank you codex and glm